Fix scrollbar for side menu

--- a/src/molecules/SideMenu/SideMenu.pcss
+++ b/src/molecules/SideMenu/SideMenu.pcss
@@ -3,7 +3,7 @@
   width: 240px;
   background-color: var(--grey-100);
   font-size: 16px;
-  overflow-y: scroll;
+  overflow-y: auto;
   white-space: nowrap;
   overflow-x: hidden;
   transition: width 0.2s;
